# svcman

./: .gitignore  CMakeLists.txt
.github/: FUNDING.yml
app/: viewer.ui
devel-docs/: devel-docs.md
src/: main.cpp  sd_handler.cpp  sd_handler.h  sd_handler.py  stdStyles.h  svcmanRunner.h  svcviewer.cpp  svcviewer.h  svcviewer.ui
